--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -8,11 +8,23 @@ body {
   font-family: Besley, serif;
 }
 
+.logo-links, .noti-profile
+{
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
+
 
 .profile-image {
   background: rebeccapurple;
@@ -28,6 +40,7 @@ body {
   font-weight: 900;
   font-style: italic;
 }
+
 
 button {
   border: none;
@@ -45,4 +58,8 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
 }
