--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -15,11 +15,36 @@ body {
   justify-content: center;
 }
 
+.box-one
+{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  /* display: flex;
+  flex-direction: column; */
+  padding: 20px;
+
+}
+
+.ich
+{
+  display: flex;
+  gap: 11px;
+  align-items: flex-start;
+}
+
+.header
+{
+  font-size: 20px;
+  font-weight: bold;
+
 }
 
 .icon {
@@ -50,10 +75,24 @@ body {
   padding: 0;
 }
 
+.box-two
+{
+  display: flex;
+  flex-direction: column;
+  margin-left: 55px;
+}
+
+.box-two .text
+{
+  text-align: start;
+  margin-bottom: 12px;
+}
+
 button {
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
+  font-weight: bold;
 }
 
 button.continue {
