--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,48 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+}
+
+.header, .footer
+{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  
+}
+
+
+
+.left-links, .right-links
+{
+  display: flex;
+  gap: 15px;
+}
+
+.left-links a, .right-links a
+{
+  text-decoration: none;
+  color: grey;
+}
+
+
+ul
+{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.content
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex: 1;
+  gap: 16px;
 }
 
 img {
@@ -16,6 +58,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 15px;
 }
 
 input {
@@ -23,4 +66,9 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+.footer
+{
+  background-color: #eee;
 }
