--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,94 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
+  display: flex;
+  align-items: center;
+
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+
+  padding-left: 16px;
+
+  
 }
 
-.footer {
-  height: 72px;
-  background: #eee;
-  color: darkmagenta;
+.general
+{
+  display: flex;
+  flex: 1;
 }
+
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  padding: 10px;
+  flex-shrink: 0;
+  
+}
+.sidebar a
+{
+
+  text-decoration: none;
+}
+
+.sidebar ul
+{
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+}
+
+.sidebar li
+{
+  display: flex;
+  width: 200px;
+  
+}
+
+.sidebar a
+{
+  color: white;
+  font-size: 24px;
+  text-decoration: none;
+}
+
+.cards 
+{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
+  justify-content: center;
+  padding: 48px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
+  padding: 48px;
+
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 72px;
+  background: #eee;
+  color: darkmagenta;
+  text-align: center;
 }
